# badpdfs-site

./: .build_cache.json  .gitignore  CLAUDE.md  README.md  config.json  index.html
.github/workflows/: deploy.yml
_astro/: ImageLightbox.astro_astro_type_script_index_0_lang.Cx4c9KCn.js  Search.astro_astro_type_script_index_0_lang.Bxe8LC99.js  _method_.CZzxrqF8.css  _method_.astro_astro_type_script_index_0_lang.CMshUSZX.js  _slug_.B3jYt87b.css  about.DqOHNfsy.css  about.K2Del1EQ.css
about/: index.html
artifacts/: all_metadata.json  dashboard.html  search_index.compact.json  search_index.json  summary.json  valid_pdfs.json  validation_report.json
errors/: index.html
frontend/: METHOD_DETAIL_PAGES.md  astro.config.mjs  package-lock.json  package.json
frontend/public/: CNAME
frontend/scripts/: copy-artifacts.js  watch-artifacts.js
methods/: index.html
methods/above/: index.html
methods/add/: index.html
methods/add_exclusion/: index.html
methods/analyze_layout/: index.html
methods/apply/: index.html
processor/: .env.example  README.md  build.py  generate_dashboard.py  pyproject.toml
processor/core/: __init__.py  cache.py  config.py  processor.py
processor/domain/: __init__.py  exceptions.py  models.py
processor/scripts/: __init__.py  download_pdfs_from_r2.py  download_pdfs_from_r2_sync.py  upload_to_r2.py
processor/tasks/: __init__.py  base.py  dashboard.py  execution.py  metadata.py  notebooks.py  screenshots.py  search.py  validation.py  validation_incremental.py
processor/utils/: error_handler.py
search/: index.html
(+270 files in other folders)
